# ncviewjs-backend

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yml  environment-dev.yml  environment.yml  fly.toml  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: fly.yml  main.yaml
docs/: README.md
envs/: environment.yml
flows/: .prefectignore  ncview_rechunk.py  submit.py
migrations/: env.py
migrations/versions/: 04b05d89a6aa_update_last_accessed.py  0ae062f9a511_add_rechunking_entry.py  4190ecff05e6_rename_cf_coordinates_to_cf_axes.py  550ed2004f88_initial_migrations_reset.py  555792e14860_rename_cf_coordinates_to_cf_axes.py  5cbd3ce553d7_initial_migration.py  7596588da60b_initial_migration.py  7ccaba782483_make_last_accessed_nullable.py  9db168931ca1_add_last_accessed_and_size.py  bbf7ffb88ce9_add_start_time_and_end_time.py  c3b4eab1edf4_initial_migrations_reset.py  c3d8dc7fbf25_add_cf_coordinates.py  c973a7f8587e_add_error_message_traceback.py  e3408e4f1867_.py  f7eaff86d92f_initial_migrations_add_created_field.py
ncviewjs-backend/: .dockerignore  Dockerfile  Dockerfile.prod  fly.toml  pyproject.toml  release.sh
ncviewjs-backend/app/: config.py  db.py  helpers.py  main.py  store_validation.py
ncviewjs-backend/app/api/: store.py
ncviewjs-backend/app/models/: pydantic.py  tortoise.py
ncviewjs-backend/app/rechunker/: rechunk.py  utils.py
ncviewjs-backend/db/: create.sql
ncviewjs-backend/envs/: environment.yml
ncviewjs-backend/migrations/models/: 0_20221120062930_init.py  0_20221122024936_init.py  1_20221128160531_update.py  1_20221129211636_None.py  2_20221129001131_update.py  3_20221129001347_update.py  4_20221121232458_update.py  4_20221129001412_update.py
ncviewjs-backend/tests/: conftest.py  test_store.py  test_store_validation.py
ncviewjs_backend/: config.py  database.py  dataset_processing.py  dataset_validation.py  helpers.py  logging.py  main.py
ncviewjs_rechunker/: create_test_data.ipynb  rechunk.ipynb
notebooks/: create_test_data.ipynb  rechunk.ipynb
tests/: conftest.py  test_dataset_processing.py  test_dataset_validation.py  test_datasets.py  test_health.py  test_helpers.py  test_ping.py  test_store_validation.py
(+10 files in other folders)
