[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true


[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"



[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=./ --cov-report=xml --cov-append --cov-report term-missing --verbose"
